<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_recibo_nuevo"
        android:padding="8dp"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_tipo_recibo"
        android:padding="8dp"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/account_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.522">

        <RadioButton
            android:id="@+id/rbt_recibo_agua"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="1dp"
            android:text="@string/txt_recibo_agua"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/rbt_recibo_energia"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="1dp"
            android:text="@string/txt_recibo_energia"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/rbt_recibo_gas"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="1dp"
            android:text="@string/txt_recibo_gas"
            android:textColor="#000000" />

        <RadioButton
            android:id="@+id/rbt_recibo_telefono"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="1dp"
            android:text="@string/txt_recibo_telefonia"
            android:textColor="#000000" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_direccion"
        android:padding="8dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edt_direccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_medida"
        android:padding="8dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edt_medida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_valor"
        android:padding="8dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/edt_valor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnguardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boton_guardar" />

</LinearLayout>
